--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT=3000
 JWT_SECRET=iuhhuhhhkijw4jh9
 PYTHON_INGESTION_URL=http://localhost:5000/ingest
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=123456
+DB_DATABASE=postgres
